--- a/educacion.html
+++ b/educacion.html
@@ -4,11 +4,93 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/normalize.css">
+    <script src="https://kit.fontawesome.com/b9bab6ee74.js" crossorigin="anonymous"></script>
+    <title>Curriculum Vitae</title>
 </head>
 
 <body>
-    <p>hola</p>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+</body>
+<header>
+    <nav class="nav1">
+        <ul class="nav justify-content-center">
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="./index.html">Biografía</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./educacion.html">Educación</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./experiencia.html">Experiencia</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./portafolio.html">Portafolio</a>
+            </li>
+        </ul>
+    </nav>
+</header>
+<main class="main_totalcard">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="card card_exp" style="width: 18rem;">
+                <center><img src="./assets/imgs/uchile.jpg" class="card-img-top" alt="..."></center>
+                <div class="card-body">
+                    <h5 class="card-title">Magíster en informática médica</h5>
+                    <p class="card-text">2020-2023</p>
+                    <p class="card-text">Universidad de Chile</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="card card_exp" style="width: 18rem;">
+                <center><img src="./assets/imgs/uchile.jpg" class="card-img-top" alt="..."></center>
+                <div class="card-body">
+                    <h5 class="card-title">Tecnólgo Médico Oftalmología</h5>
+                    <p class="card-text">2009-2014</p>
+                    <p class="card-text">Universidad de Chile</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div id="humai" class="card card_exp" style="width: 18rem;">
+                <center><img src="./assets/imgs/humai.jpg" class="card-img-top imgcard" alt="..."></center>
+                <div class="card-body">
+                    <h5 class="card-title">Diplomado en IA</h5>
+                    <p class="card-text">2024-actualidad</p>
+                    <p class="card-text">Instituto Humai</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div id="latam" class="card card_exp" style="width: 18rem;">
+                <center> <img src="./assets/imgs/desafio.png" class="card-img-top" alt="..."></center>
+                <div class="card-body">
+                    <h5 class="card-title">Full Stack javascript</h5>
+                    <p class="card-text">2024-actualidad</p>
+                    <p class="card-text">Desafío LATAM</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</main>
+<footer>
+    <div class="linkedin"><a href="https://www.linkedin.com/in/yasna-soto-sanchez-75a270148/" target="_blank"><i
+                class="fa-brands fa-linkedin"></i></a>
+        <p>LinkedIn</p>
+    </div>
+    <div class="linkedin"><a href="https://github.com/ydsosan?tab=repositories" target="_blank"><i
+                class="fa-brands fa-github"></i></a>
+        <p>Github ydsosan</p>
+    </div>
+
+</footer>
 </body>
 
 </html>
