--- a/index.html
+++ b/index.html
@@ -4,52 +4,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/normalize.css">
+    <script src="https://kit.fontawesome.com/b9bab6ee74.js" crossorigin="anonymous"></script>
     <title>Curriculum Vitae</title>
 </head>
-<header>
-    <nav class="nav1">
-        <ul class="nav justify-content-center">
-            <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="./index.html">Biografía</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./educacion.html">Educación</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Experiencia</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="">Portafolio</a>
-            </li>
-        </ul>
-    </nav>
-</header>
-<main>
-    <div class="cardcontainer">
-        <div class="card col-xs-12">
-            <img src="./assets/imgs/yasna.jpeg" class="card-img-top" alt="...">
-            <div class="card-body col-xs-12">
-                <div class="text-section">
-                    <h2 class="card-title">Yasna Soto</h2>
-
-                    <p class="card-text">Tecnologo Médico de la Uiversidad de Chile, Magíster en Informática Médica de
-                        la Universidad de Chile y Heidelberg.
-                        Participé en el GMDS conference en Heilbronn 2023, Alemania, presentando mi trabajo de tesis del
-                        Hospital San José.
-                    </p>
-                </div>
-            </div>
-        </div>
-
-</main>
 
 <body>
+    <header>
+        <nav class="nav1">
+            <ul class="nav justify-content-center">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="./index.html">Biografía</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./educacion.html">Educación</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./experiencia.html">Experiencia</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./portafolio.html">Portafolio</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="cardcontainer">
+            <div class="card col-xs-12 maincard">
+                <img src="./assets/imgs/yasna.jpeg" class="card-img-top" alt="...">
+                <div class="card-body col-xs-12 maincard-body">
+                    <div class="text-section">
+                        <h2 class="card-title">Yasna Soto</h2>
 
+                        <p class="card-text">Tecnologo Médico de la Uiversidad de Chile, Magíster en Informática Médica
+                            de
+                            la Universidad de Chile y Heidelberg.
+                            Participé en el GMDS conference en Heilbronn 2023, Alemania, presentando mi trabajo de tesis
+                            del
+                            Hospital San José.
+                        </p>
+                    </div>
+                </div>
+            </div>
 
+    </main>
+    <footer>
+        <div class="linkedin"><a href="https://www.linkedin.com/in/yasna-soto-sanchez-75a270148/" target="_blank"><i
+                    class="fa-brands fa-linkedin"></i></a>
+            <p>LinkedIn</p>
+        </div>
+        <div class="linkedin"><a href="https://github.com/ydsosan?tab=repositories" target="_blank"><i
+                    class="fa-brands fa-github"></i></a>
+            <p>Github ydsosan</p>
+        </div>
+
+    </footer>
 </body>
 
 </html>
