--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <img src="./assets/imgs/yasna.jpeg" class="card-img-top" alt="...">
                 <div class="card-body col-xs-12 maincard-body">
                     <div class="text-section">
-                        <h2 class="card-title">Yasna Soto</h2>
+                        <h2 class="card-title text-center">Yasna Soto</h2>
 
                         <p class="card-text">Tecnologo Médico de la Uiversidad de Chile, Magíster en Informática Médica
                             de
